--- a/.env.example
+++ b/.env.example
@@ -64,4 +64,8 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_REDIRECT_URI=http://your-app.com/auth/google/callback
+
 VITE_APP_NAME="${APP_NAME}"
